sdl3/packages/include_C/fertig/SDL_stdinc.h

#    define SDL_DISABLE_ALLOCA
#   define alloca __builtin_alloca
#   define alloca _alloca
void *alloca(unsigned);
char *alloca();
typedef int8_t Sint8;
typedef uint8_t Uint8;
typedef int16_t Sint16;
typedef uint16_t Uint16;
typedef int32_t Sint32;
typedef uint32_t Uint32;
typedef int64_t Sint64;
typedef uint64_t Uint64;
#define SDL_IN_BYTECAP(x) _In_bytecount_(x)
#define SDL_INOUT_Z_CAP(x) _Inout_z_cap_(x)
#define SDL_OUT_Z_CAP(x) _Out_z_cap_(x)
#define SDL_OUT_CAP(x) _Out_cap_(x)
#define SDL_OUT_BYTECAP(x) _Out_bytecap_(x)
#define SDL_OUT_Z_BYTECAP(x) _Out_z_bytecap_(x)
#define SDL_PRINTF_FORMAT_STRING _Printf_format_string_
#define SDL_SCANF_FORMAT_STRING _Scanf_format_string_impl_
//#define SDL_IN_BYTECAP(x)
//#define SDL_INOUT_Z_CAP(x)
////#define SDL_OUT_Z_CAP(x)
////#define SDL_OUT_CAP(x)
//#define SDL_OUT_BYTECAP(x)
//#define SDL_OUT_Z_BYTECAP(x)
#define SDL_PRINTF_FORMAT_STRING
#define SDL_SCANF_FORMAT_STRING
/** \endcond */

/* Check to make sure enums are the size of ints, for structure packing.
   For both Watcom C/C++ and Borland C/C++ the compiler option that makes
   enums having the size of an int must be enabled.
   This is "-b" for Borland C/C++ and "-ei" for Watcom C/C++ (v11).
*/

/** \cond */
//#ifndef DOXYGEN_SHOULD_IGNORE_THIS
//#if !defined(SDL_PLATFORM_ANDROID) && !defined(SDL_PLATFORM_VITA) && !defined(SDL_PLATFORM_3DS)
   /* TODO: include/SDL_stdinc.h:174: error: size of array 'SDL_dummy_enum' is negative */
typedef enum
{
    DUMMY_ENUM_VALUE
} SDL_DUMMY_ENUM;
#define SDL_stack_alloc(type, count)    (type*)SDL_malloc(sizeof(type)*(count))
#define SDL_stack_free(data)            SDL_free(data)
extern   void * SDL_malloc(size_t size);
extern   void * SDL_calloc(size_t nmemb, size_t size);
extern   void * SDL_realloc(void *mem, size_t size);
extern  void  SDL_free(void *mem);
typedef void *( *SDL_malloc_func)(size_t size);
typedef void *( *SDL_calloc_func)(size_t nmemb, size_t size);
typedef void *( *SDL_realloc_func)(void *mem, size_t size);
typedef void ( *SDL_free_func)(void *mem);
/**
 * Get the original set of SDL memory functions
 *
 * \param malloc_func filled with malloc function
 * \param calloc_func filled with calloc function
 * \param realloc_func filled with realloc function
 * \param free_func filled with free function
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  void  SDL_GetOriginalMemoryFunctions(SDL_malloc_func *malloc_func,
                                                            SDL_calloc_func *calloc_func,
                                                            SDL_realloc_func *realloc_func,
                                                            SDL_free_func *free_func);
/**
 * Get the current set of SDL memory functions
 *
 * \param malloc_func filled with malloc function
 * \param calloc_func filled with calloc function
 * \param realloc_func filled with realloc function
 * \param free_func filled with free function
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  void  SDL_GetMemoryFunctions(SDL_malloc_func *malloc_func,
                                                    SDL_calloc_func *calloc_func,
                                                    SDL_realloc_func *realloc_func,
                                                    SDL_free_func *free_func);
/**
 * Replace SDL's memory allocation functions with a custom set
 *
 * \param malloc_func custom malloc function
 * \param calloc_func custom calloc function
 * \param realloc_func custom realloc function
 * \param free_func custom free function
 * \returns 0 on success or a negative error code on failure; call
 *          SDL_GetError() for more information.
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  int  SDL_SetMemoryFunctions(SDL_malloc_func malloc_func,
                                                   SDL_calloc_func calloc_func,
                                                   SDL_realloc_func realloc_func,
                                                   SDL_free_func free_func);
/**
 * Allocate memory aligned to a specific value
 *
 * If `alignment` is less than the size of `void *`, then it will be increased
 * to match that.
 *
 * The returned memory address will be a multiple of the alignment value, and
 * the amount of memory allocated will be a multiple of the alignment value.
 *
 * The memory returned by this function must be freed with SDL_aligned_free()
 *
 * \param alignment the alignment requested
 * \param size the size to allocate
 * \returns a pointer to the aligned memory
 *
 * \since This function is available since SDL 3.0.0.
 *
 * \sa SDL_aligned_free
 */
extern void * SDL_aligned_alloc(size_t alignment, size_t size);
/**
 * Free memory allocated by SDL_aligned_alloc()
 *
 * \since This function is available since SDL 3.0.0.
 *
 * \sa SDL_aligned_alloc
 */
extern  void  SDL_aligned_free(void *mem);
/**
 * Get the number of outstanding (unfreed) allocations
 *
 * \returns the number of allocations
 *
 * \since This function is available since SDL 3.0.0.
 */
extern  int  SDL_GetNumAllocations(void);
extern  char * SDL_getenv(const char *name);
extern  int  SDL_setenv(const char *name, const char *value, int overwrite);
extern  void  SDL_qsort(void *base, size_t nmemb, size_t size, int ( *compare) (const void *, const void *));
extern  void *  SDL_bsearch(const void *key, const void *base, size_t nmemb, size_t size, int ( *compare) (const void *, const void *));
extern  int  SDL_abs(int x);
/* NOTE: these double-evaluate their arguments, so you should never have side effects in the parameters */
#define SDL_min(x, y) (((x) < (y)) ? (x) : (y))
#define SDL_max(x, y) (((x) > (y)) ? (x) : (y))
#define SDL_clamp(x, a, b) (((x) < (a)) ? (a) : (((x) > (b)) ? (b) : (x)))
extern  int  SDL_isalpha(int x);
extern  int  SDL_isalnum(int x);
extern  int  SDL_isblank(int x);
extern  int  SDL_iscntrl(int x);
extern  int  SDL_isdigit(int x);
extern  int  SDL_isxdigit(int x);
extern  int  SDL_ispunct(int x);
extern  int  SDL_isspace(int x);
extern  int  SDL_isupper(int x);
extern  int  SDL_islower(int x);
extern  int  SDL_isprint(int x);
extern  int  SDL_isgraph(int x);
extern  int  SDL_toupper(int x);
extern  int  SDL_tolower(int x);
extern  Uint16  SDL_crc16(Uint16 crc, const void *data, size_t len);
extern  Uint32  SDL_crc32(Uint32 crc, const void *data, size_t len);
extern  void * SDL_memcpy( void *dst, const void *src, size_t len);
#define SDL_memcpy  memcpy
//#define SDL_copyp(dst, src)                                                                 \
//    { SDL_COMPILE_TIME_ASSERT(SDL_copyp, sizeof (*(dst)) == sizeof (*(src))); }             \
//    SDL_memcpy((dst), (src), sizeof(*(src)))

extern  void * SDL_memmove( void *dst,  const void *src, size_t len);
#define SDL_memmove memmove
extern  void * SDL_memset( void *dst, int c, size_t len);
extern  void * SDL_memset4(void *dst, Uint32 val, size_t dwords);
#define SDL_memset  memset
#define SDL_zero(x) SDL_memset(&(x), 0, sizeof((x)))
#define SDL_malloc malloc
#define SDL_calloc calloc
#define SDL_realloc realloc
#define SDL_free free
#define SDL_memcpy memcpy
#define SDL_memmove memmove
#define SDL_memset memset