sdl3/packages/pas_includes/sdl3_stdinc.inc


//function SDL_IN_BYTECAP(x : longint) : longint;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_INOUT_Z_CAP(x : longint) : longint;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_OUT_Z_CAP(x : longint) : longint;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_OUT_CAP(x : longint) : longint;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_OUT_BYTECAP(x : longint) : longint;
//
//{ was #define dname(params) para_def_expr }
//{ argument types are unknown }
//{ return type might be wrong }   
//function SDL_OUT_Z_BYTECAP(x : longint) : longint;
//
//const
//  SDL_PRINTF_FORMAT_STRING = _Printf_format_string_;  
//  SDL_SCANF_FORMAT_STRING = _Scanf_format_string_impl_;  
//{$else}
{#define SDL_IN_BYTECAP(x) }
{#define SDL_INOUT_Z_CAP(x) }
{//#define SDL_OUT_Z_CAP(x) }
{//#define SDL_OUT_CAP(x) }
{#define SDL_OUT_BYTECAP(x) }
{#define SDL_OUT_Z_BYTECAP(x) }
//{$define SDL_PRINTF_FORMAT_STRING}
//{$define SDL_SCANF_FORMAT_STRING}
//{$endif}
//{$ifdef __GNUC__}
{#define SDL_PRINTF_VARARG_FUNC( fmtargnumber ) __attribute__ (( format( __printf__, fmtargnumber, fmtargnumber+1 ))) }
{#define SDL_PRINTF_VARARG_FUNCV( fmtargnumber ) __attribute__(( format( __printf__, fmtargnumber, 0 ))) }
{#define SDL_SCANF_VARARG_FUNC( fmtargnumber ) __attribute__ (( format( __scanf__, fmtargnumber, fmtargnumber+1 ))) }
{#define SDL_SCANF_VARARG_FUNCV( fmtargnumber ) __attribute__(( format( __scanf__, fmtargnumber, 0 ))) }
{#define SDL_WPRINTF_VARARG_FUNC( fmtargnumber ) /* __attribute__ (( format( __wprintf__, fmtargnumber, fmtargnumber+1 ))) */ }
{#define SDL_WSCANF_VARARG_FUNC( fmtargnumber ) /* __attribute__ (( format( __wscanf__, fmtargnumber, fmtargnumber+1 ))) */ }
//{$else}
{#define SDL_PRINTF_VARARG_FUNC( fmtargnumber ) }
{#define SDL_PRINTF_VARARG_FUNCV( fmtargnumber ) }
{#define SDL_SCANF_VARARG_FUNC( fmtargnumber ) }
{#define SDL_SCANF_VARARG_FUNCV( fmtargnumber ) }
{#define SDL_WPRINTF_VARARG_FUNC( fmtargnumber ) }
{#define SDL_WSCANF_VARARG_FUNC( fmtargnumber ) }
//{$endif}
//{$endif}
{ SDL_DISABLE_ANALYZE_MACROS  }
{#ifndef SDL_COMPILE_TIME_ASSERT }
{#ifdef __cplusplus }
{#if (__cplusplus >= 201103L) }
{#define SDL_COMPILE_TIME_ASSERT(name, x)  static_assert(x, #x) }
{#endif }
{#elif defined(__STDC_VERSION__) && (__STDC_VERSION__ >= 201112L) }
{#define SDL_COMPILE_TIME_ASSERT(name, x) _Static_assert(x, #x) }
{#endif }
{#endif /* !SDL_COMPILE_TIME_ASSERT */ }
{#ifndef SDL_COMPILE_TIME_ASSERT }
{ universal, but may trigger -Wunused-local-typedefs  }
{#define SDL_COMPILE_TIME_ASSERT(name, x)               \ }
{       typedef int SDL_compile_time_assert_ ## name[(x) * 2 - 1] }
{#endif }
{* \cond  }
//{$ifndef DOXYGEN_SHOULD_IGNORE_THIS}
{SDL_COMPILE_TIME_ASSERT(uint8, sizeof(Uint8) == 1); }
{SDL_COMPILE_TIME_ASSERT(sint8, sizeof(Sint8) == 1); }
{SDL_COMPILE_TIME_ASSERT(uint16, sizeof(Uint16) == 2); }
{SDL_COMPILE_TIME_ASSERT(sint16, sizeof(Sint16) == 2); }
{SDL_COMPILE_TIME_ASSERT(uint32, sizeof(Uint32) == 4); }
{SDL_COMPILE_TIME_ASSERT(sint32, sizeof(Sint32) == 4); }
{SDL_COMPILE_TIME_ASSERT(uint64, sizeof(Uint64) == 8); }
{SDL_COMPILE_TIME_ASSERT(sint64, sizeof(Sint64) == 8); }
//{$endif}
{ DOXYGEN_SHOULD_IGNORE_THIS  }
{* \endcond  }
{ Check to make sure enums are the size of ints, for structure packing.
   For both Watcom C/C++ and Borland C/C++ the compiler option that makes
   enums having the size of an int must be enabled.
   This is "-b" for Borland C/C++ and "-ei" for Watcom C/C++ (v11).
 }
{* \cond  }
{#ifndef DOXYGEN_SHOULD_IGNORE_THIS }
{#if !defined(SDL_PLATFORM_ANDROID) && !defined(SDL_PLATFORM_VITA) && !defined(SDL_PLATFORM_3DS) }
{ TODO: include/SDL_stdinc.h:174: error: size of array 'SDL_dummy_enum' is negative  }
type
  PSDL_DUMMY_ENUM = ^TSDL_DUMMY_ENUM;
  TSDL_DUMMY_ENUM =  Longint;
  Const
    DUMMY_ENUM_VALUE = 0;

{SDL_COMPILE_TIME_ASSERT(enum, sizeof(SDL_DUMMY_ENUM) == sizeof(int)); }
{#endif }
{#endif /* DOXYGEN_SHOULD_IGNORE_THIS */ }
{* \endcond  }
//{$include <SDL3/SDL_begin_code.h>}
{ Set up for C function definitions, even when using C++  }
{ C++ extern C conditionnal removed }
//{$ifndef SDL_DISABLE_ALLOCA}
{#define SDL_stack_alloc(type, count)    (type*)alloca(sizeof(type)*(count)) }
{#define SDL_stack_free(data) }
//{$else}
{ was #define dname(params) para_def_expr }
{ argument types are unknown }

//function SDL_stack_alloc(_type,count : longint) : Ptype;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
//function SDL_stack_free(data : longint) : longint;

//{$endif}

function SDL_malloc(size:Tsize_t):pointer;cdecl;external;
function SDL_calloc(nmemb:Tsize_t; size:Tsize_t):pointer;cdecl;external;
function SDL_realloc(mem:pointer; size:Tsize_t):pointer;cdecl;external;
procedure SDL_free(mem:pointer);cdecl;external;
type
  PSDL_malloc_func = ^TSDL_malloc_func;
  TSDL_malloc_func = function (size:Tsize_t):pointer;cdecl;

  PSDL_calloc_func = ^TSDL_calloc_func;
  TSDL_calloc_func = function (nmemb:Tsize_t; size:Tsize_t):pointer;cdecl;

  PSDL_realloc_func = ^TSDL_realloc_func;
  TSDL_realloc_func = function (mem:pointer; size:Tsize_t):pointer;cdecl;

  TSDL_free_func = procedure (mem:pointer);cdecl;
  PSDL_free_func = ^TSDL_free_func;
{*
 * Get the original set of SDL memory functions
 *
 * \param malloc_func filled with malloc function
 * \param calloc_func filled with calloc function
 * \param realloc_func filled with realloc function
 * \param free_func filled with free function
 *
 * \since This function is available since SDL 3.0.0.
  }

procedure SDL_GetOriginalMemoryFunctions(malloc_func:PSDL_malloc_func; calloc_func:PSDL_calloc_func; realloc_func:PSDL_realloc_func; free_func:PSDL_free_func);cdecl;external;
{*
 * Get the current set of SDL memory functions
 *
 * \param malloc_func filled with malloc function
 * \param calloc_func filled with calloc function
 * \param realloc_func filled with realloc function
 * \param free_func filled with free function
 *
 * \since This function is available since SDL 3.0.0.
  }
procedure SDL_GetMemoryFunctions(malloc_func:PSDL_malloc_func; calloc_func:PSDL_calloc_func; realloc_func:PSDL_realloc_func; free_func:PSDL_free_func);cdecl;external;
{*
 * Replace SDL's memory allocation functions with a custom set
 *
 * \param malloc_func custom malloc function
 * \param calloc_func custom calloc function
 * \param realloc_func custom realloc function
 * \param free_func custom free function
 * \returns 0 on success or a negative error code on failure; call
 *          SDL_GetError() for more information.
 *
 * \since This function is available since SDL 3.0.0.
  }
function SDL_SetMemoryFunctions(malloc_func:TSDL_malloc_func; calloc_func:TSDL_calloc_func; realloc_func:TSDL_realloc_func; free_func:TSDL_free_func):longint;cdecl;external;
{*
 * Allocate memory aligned to a specific value
 *
 * If `alignment` is less than the size of `void *`, then it will be increased
 * to match that.
 *
 * The returned memory address will be a multiple of the alignment value, and
 * the amount of memory allocated will be a multiple of the alignment value.
 *
 * The memory returned by this function must be freed with SDL_aligned_free()
 *
 * \param alignment the alignment requested
 * \param size the size to allocate
 * \returns a pointer to the aligned memory
 *
 * \since This function is available since SDL 3.0.0.
 *
 * \sa SDL_aligned_free
  }
function SDL_aligned_alloc(alignment:Tsize_t; size:Tsize_t):pointer;cdecl;external;
{*
 * Free memory allocated by SDL_aligned_alloc()
 *
 * \since This function is available since SDL 3.0.0.
 *
 * \sa SDL_aligned_alloc
  }
procedure SDL_aligned_free(mem:pointer);cdecl;external;
{*
 * Get the number of outstanding (unfreed) allocations
 *
 * \returns the number of allocations
 *
 * \since This function is available since SDL 3.0.0.
  }
function SDL_GetNumAllocations:longint;cdecl;external;
(* Const before type ignored *)
function SDL_getenv(name:Pchar):Pchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function SDL_setenv(name:Pchar; value:Pchar; overwrite:longint):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
type TSDL_qsort_func=function (para1:pointer; para2:pointer):LongInt;

procedure SDL_qsort(base:pointer; nmemb:Tsize_t; size:Tsize_t; compare:TSDL_qsort_func);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)

 type SDL_bsearch_func=function (para1:pointer; para2:pointer):longint;
function SDL_bsearch(key:pointer; base:pointer; nmemb:Tsize_t; size:Tsize_t; compare:SDL_bsearch_func):pointer;cdecl;external;
function SDL_abs(x:longint):longint;cdecl;external;
{ NOTE: these double-evaluate their arguments, so you should never have side effects in the parameters  }
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function SDL_min(x,y : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function SDL_max(x,y : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function SDL_clamp(x,a,b : longint) : longint;

function SDL_isalpha(x:longint):longint;cdecl;external;
function SDL_isalnum(x:longint):longint;cdecl;external;
function SDL_isblank(x:longint):longint;cdecl;external;
function SDL_iscntrl(x:longint):longint;cdecl;external;
function SDL_isdigit(x:longint):longint;cdecl;external;
function SDL_isxdigit(x:longint):longint;cdecl;external;
function SDL_ispunct(x:longint):longint;cdecl;external;
function SDL_isspace(x:longint):longint;cdecl;external;
function SDL_isupper(x:longint):longint;cdecl;external;
function SDL_islower(x:longint):longint;cdecl;external;
function SDL_isprint(x:longint):longint;cdecl;external;
function SDL_isgraph(x:longint):longint;cdecl;external;
function SDL_toupper(x:longint):longint;cdecl;external;
function SDL_tolower(x:longint):longint;cdecl;external;
(* Const before type ignored *)
function SDL_crc16(crc:TUint16; data:pointer; len:Tsize_t):TUint16;cdecl;external;
(* Const before type ignored *)
function SDL_crc32(crc:TUint32; data:pointer; len:Tsize_t):TUint32;cdecl;external;
(* Const before type ignored *)
function SDL_memcpy(dst:pointer; src:pointer; len:Tsize_t):pointer;cdecl;external;
{ Take advantage of compiler optimizations for memcpy  }
//{$ifndef SDL_SLOW_MEMCPY}
//{$ifdef SDL_memcpy}
//{$undef SDL_memcpy}
//{$endif}

//{$endif}
{#define SDL_copyp(dst, src)                                                                 \ }
{     SDL_COMPILE_TIME_ASSERT(SDL_copyp, sizeof (*(dst)) == sizeof (*(src)));              \ }
{    SDL_memcpy((dst), (src), sizeof(*(src))) }
(* Const before type ignored *)

function SDL_memmove(dst:pointer; src:pointer; len:Tsize_t):pointer;cdecl;external;
{ Take advantage of compiler optimizations for memmove  }
//{$ifndef SDL_SLOW_MEMMOVE}
//{$ifdef SDL_memmove}
//{$undef SDL_memmove}
//{$endif}

//{$endif}

function SDL_memset(dst:pointer; c:longint; len:Tsize_t):pointer;cdecl;external;
function SDL_memset4(dst:pointer; val:TUint32; dwords:Tsize_t):pointer;cdecl;external;
{ Take advantage of compiler optimizations for memset  }
//{$ifndef SDL_SLOW_MEMSET}
//{$ifdef SDL_memset}
//{$undef SDL_memset}
//{$endif}

//{$endif}
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   

//function SDL_zero(x : longint) : longint;
